Lineamientos_Nuevos_Borradores/versionamiento/ejemplos-plantillas-gitlab/template-backend-java-modular/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-nombre-sistema
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-nombre-sistema
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-nombre-sistema
    spec:
      containers:
        - name: api-nombre-sistema
          image: api-nombre-sistema:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
