Lineamientos_Nuevos_Borradores/versionamiento/ejemplos-plantillas-gitlab/template-backend-java-modular/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nombre-sistema
spec:
  selector:
    app.kubernetes.io/name: api-nombre-sistema
  ports:
    - port: 80
      targetPort: 8080
